--- a/onebitflix-front/styles/profile.module.scss
+++ b/onebitflix-front/styles/profile.module.scss
@@ -74,7 +74,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
     gap: 20px;
   }
   .input {
@@ -90,6 +89,8 @@
     font-size: 15px;
     padding: 6px 20px;
     transition: 0.4s;
+    display: block;
+    margin: 0 auto;
     &:hover {
       border-color: $darkRed;
       background-color: transparent;
@@ -116,8 +117,8 @@
       padding: 14px 0px;
     &:hover {
       background-color: transparent;
-      border-color: $lightRed;
-      color: $lightGray;
+      border-color: $lightGray;
+      color: $lightRed;
     }
   }
 
