--- a/onebitflix-front/src/components/homeNoAuth/cardsSection/styles.module.scss
+++ b/onebitflix-front/src/components/homeNoAuth/cardsSection/styles.module.scss
@@ -1,5 +1,6 @@
 @import "../../../../styles/colors.module.scss";
 .sectionTitle {
+  text-decoration: none;
   font-size: 20px;
   font-weight: bold;
   text-align: center;
@@ -16,17 +17,20 @@
     justify-content: flex-end;
     transition: 0.3s;
     .cardTitle {
+      text-decoration: none;
       transition: 0.3s;
       font-weight: bold;
       margin-bottom: 8px;
     }
     .cardDescription {
+      text-decoration: none;
       font-size: 15px;
       color: $lightGray;
     }
       &:hover {
       transform: scale(1.03);
       .cardTitle {
+        text-decoration: none;
         font-size: 18px;
         margin-left: 8px;
       }
