--- a/onebitflix-front/src/components/homeNoAuth/slideSection/styles.module.scss
+++ b/onebitflix-front/src/components/homeNoAuth/slideSection/styles.module.scss
@@ -1,5 +1,6 @@
 @import "../../../../styles/colors.module.scss";
 .sectionTitle {
+  text-decoration: none;
   font-size: 20px;
   font-weight: bold;
 }
