--- a/onebitflix-front/styles/globals.scss
+++ b/onebitflix-front/styles/globals.scss
@@ -2,9 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none
   }
 
   main {
+    text-decoration: none;
     background-color: #151515;
     min-height: 100vh;
     color: white;
