--- a/onebitflix-front/src/components/common/slideCard/styles.module.scss
+++ b/onebitflix-front/src/components/common/slideCard/styles.module.scss
@@ -21,11 +21,13 @@
 }
 
 .slideTitle {
+    text-decoration: none;
     color: white;
     font-weight: bold;
     padding: 8px 16px;
   }
   .slideDescription {
+    text-decoration: none;
     font-size: 14px;
     padding: 0px 16px;
     color: #ccc8c8;
